--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="page-header-item"><h1>IMSA RENT-A-CAR</h1></div>
         <div class="page-header-item">&nbsp &nbsp A WEBPAGE BUILT BY XANDER W</div>
         <div class="page-header-item">
-            <h4 onclick="openPopup('finalPopup');" class="disclaimer">Disclaimer</h4> | Total: $<span class="total-price"><span
+            <h4 onclick="openPopup('disclaimer');" class="disclaimer">Disclaimer</h4> | Total: $<span class="total-price"><span
                     id="totalPaymentDollar">0</span><sup>.<span id="totalPaymentCents">00</span></sup></span>
         </div>
     </header>
